--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port = 8080
 spring.datasource.url=jdbc:mysql://localhost:3301/products_api?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456789
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # MANIPULANDO ESTRUTURAS (TABELAS)
 spring.jpa.hibernate.ddl-auto=update
