Commit_5 Added raw image upload functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# CAMINHO REFERENCIADO LOCALMENTE
+images.upload.path=classpath:static/Images/
+
+
+
