--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>springboot_api_REST</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<name>springboot</name>
 	<packaging>jar</packaging>
-	<description>Demo project for Spring Boot</description>
+	<description>Portable project spring boot</description>
 
 	<properties>
 		<java.version>17</java.version>
